--- a/aplicacao/templates/formularioMedula.html
+++ b/aplicacao/templates/formularioMedula.html
@@ -2,14 +2,95 @@
 <html lang="pt-br">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='formulario.css') }}" />
 
+
 <head>
-    <meta charset="UTF-8">
-    <title>Formulário de Aptidão para Doação de Medula Espinhal</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      background-color: #f7f7f7;
+      padding: 20px;
+      border-radius: 15px;
+    }
+
+    h1 {
+      color: #b30000;
+      font-family: 'Poppins', sans-serif;
+      font-size: 3.2rem;
+      text-align: center;
+      background: -webkit-linear-gradient(right, #7c0a02, #9b111e, #9b111e, #ff2744);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      padding: 10px 0;
+      margin-bottom: 20px;
+    }
+
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    form label {
+      font-family: 'Poppins', sans-serif;
+      display: block;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    form input[type="radio"] {
+      margin-right: 10px;
+    }
+
+    form button[type="submit"] {
+      background-color: #b30000;
+      color: #fff;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      float: right;
+      font-family: 'Poppins', sans-serif;
+      margin-top: 20px;
+    }
+
+    .title {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .observacao {
+      font-size: 12px;
+      margin-top: 5px;
+      color: #888;
+    }
+
+    .tile {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
+
 <body>
 
 
-    <h2>Perguntas:</h2>
+  <h1>Formulário de Doação de Medula</h1>
 
     <form action="/salvar_formulario2" method="POST">
         <div>
@@ -102,6 +183,8 @@
             </div>
             <p class="observacao">Observação: Se você teve diagnóstico de doença de Chagas, não é elegível para realizar a doação de sangue.</p>
         </div>
+
+
 
         <button type="submit">Enviar</button>
     </form>
