--- a/aplicacao/templates/formulario_pdf.html
+++ b/aplicacao/templates/formulario_pdf.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Formulário de Aptidão para Doação de Sangue - PDF</title>
+
 </head>
 <body>
-    <h1>Formulário de Aptidão para Doação de Sangue - PDF</h1>
+    <h1>Formulário de Aptidão para Doação  - PDF</h1>
 
     <h2>Dados do Formulário:</h2>
 
