--- a/aplicacao/templates/index.html
+++ b/aplicacao/templates/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-dg+RhmY6jXUyMjDTuEkJTFQc6KJrXZQgJAS/bPNX00bhnl9iKJFvWfZDXODAETmFS8qqQaEf9jvPEvy9OT0D2w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
   <style>
     /* Estilos CSS */
 
     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
     *{
+          font-size: 15px;
+
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
+
     }
 
     body {
@@ -187,6 +193,15 @@
       padding: 10px;
     }
 
+    @keyframes waveAnimation {
+      0% {
+        background-position: 0px;
+      }
+
+      100% {
+        background-position: 800px;
+      }
+    }
     .navbar a {
       color: white;
       text-decoration: none;
@@ -200,7 +215,10 @@
     .navbar a:hover {
       color: rgba(255, 255, 255, 0.7);
     }
-
+    .sair{color:white;
+    align:center
+          justify-content: center;
+}
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-dg+RhmY6jXUyMjDTuEkJTFQc6KJrXZQgJAS/bPNX00bhnl9iKJFvWfZDXODAETmFS8qqQaEf9jvPEvy9OT0D2w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -222,10 +240,16 @@
       <li id="Formulario">Formulário</li>
       <li id="perfilView">Perfil</li>
     </ul>
+    <p class="sair">Sair</p>
+<img src="{{ url_for('static', filename='img_72532.png') }}" height="30px" width="30px" alt="Sair" class="logout" onclick="handleLogout()">
   </div>
 
   <div class="content">
-    <div id="route-content"></div> <!-- Elemento onde a rota será renderizada -->
+    <div id="route-content">   {% include 'index_home.html' %}
+
+        {% block body %}
+    {% endblock %}
+    </div> <!-- Elemento onde a rota será renderizada -->
   </div>
 
   <script>
@@ -246,9 +270,12 @@
           routeContentElement.innerHTML = data;
         });
     }
+  homeElement.addEventListener('click', function() {
+      loadRoute('/index_home');
+    });
 
     muralElement.addEventListener('click', function() {
-      loadRoute('/postits');
+      loadRoute('/postits_exib');
     });
 
     formularioElement.addEventListener('click', function() {
@@ -258,6 +285,16 @@
     perfilViewElement.addEventListener('click', function() {
       loadRoute('/perfilDoador/view');
     });
+    const logoutElements = document.getElementsByClassName('logout');
+
+function handleLogout() {
+  window.location.href = '/sair'; // Redireciona o usuário para a página de logout
+}
+
+Array.from(logoutElements).forEach(element => {
+  element.addEventListener('click', handleLogout);
+});
+
   </script>
 </body>
 </html>
