--- a/aplicacao/templates/pdf.html
+++ b/aplicacao/templates/pdf.html
@@ -2,6 +2,17 @@
   <!DOCTYPE html>
 <html>
 <head>
+  <style>h1 {
+            font-size: 3.2rem;
+
+            font-weight: bolder;
+            text-align: center;
+            padding-bottom: 20px;
+           background: -webkit-linear-gradient(right, #7c0a02, #9b111e, #9b111e, #ff2744);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-top: 15px;
+        }</style>
 </head>
 <body>
   <h1>PDF</h1>
