--- a/aplicacao/templates/perfilCentro.html
+++ b/aplicacao/templates/perfilCentro.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>Formulário de Perfil de Centro</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='perfilCentro.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='perfilCentro.js') }}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap">
 
 
 </head>
@@ -14,7 +16,7 @@
 
     <div class="circle-container">
 
-      <div class="circle" id="fotoCircle"></div>
+      <div class="circle" id="fotoCircle">Insira sua Foto </div>
 
     </div>
     <input type="file" id="fotoInput" name="foto" style="display: none;">
