--- a/aplicacao/templates/perfilCentro_view.html
+++ b/aplicacao/templates/perfilCentro_view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Perfil do Centro - Visualização</title>
+  <title>Perfil do Centro </title>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='perfilCentro.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='perfilCentro_view.css') }}">
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <h1>Perfil do Centro - Visualização</h1>
+  <h1>Perfil do Centro </h1>
   <div class="profile-container">
     <div class="profile-image">
       <img id="profileImage" src="{{ url_for('static', filename='UPLOAD_FOLDER/' + perfil.foto) }}" alt="Foto">
