--- a/aplicacao/static/postits.css
+++ b/aplicacao/static/postits.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
 body {
   background: -webkit-linear-gradient(left, #fff5bd, #fff5bd, #fffdd3, #fffdd3);
@@ -128,7 +129,7 @@ textarea {
 }
 
 button[type="submit"] {
-  background-color: #4CAF50;
+  background-color: -webkit-linear-gradient(left, #7c0a02,  #7c0a02, #9b111e, #c50532);
   color: white;
   padding: 10px 15px;
   border: none;
