--- a/aplicacao/templates/index_home.html
+++ b/aplicacao/templates/index_home.html
@@ -13,13 +13,10 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4729289402151385"
      crossorigin="anonymous"></script>
     <title>Donare Vitta</title>
-      {% include 'navbarlogada.html' %}
 
-        {% block body %}
-    {% endblock %}
    </head>
 
-   
+
  <body>
 
 
@@ -33,20 +30,7 @@
      <div class="work" id="work">
       <h1><span class="apres">Conheça o Projeto</span></h1>
       <div class="row">
-        <div class="col-md-4 project project1">
-          <div class="project-wrapper">
-            <div class="content">
-              <h3><a href="../login_doador"  class="btn">Já faz parte? Faça login!</a></h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 project project2">
-          <div class="project-wrapper">
-            <div class="content">
-             <h3><a href="../cadastrar_usuario" class="btn">Quer fazer parte? Cadastre-se!</a></h3>
-            </div>
-          </div>
-        </div>
+
         <div class="col-md-4 project project3">
           <div class="project-wrapper">
             <div class="content">
@@ -89,19 +73,17 @@
  <div class="social" id="social">
         <h1>Encontre-nos em:</h1>
         <div class="social-btns">
-          <a href="https://instagram.com/donare_vitta?igshid=YmM0MjE2YWMzOA==" target="_blank"><i class="fa fa-insta"></i>
-            <img src="https://img.freepik.com/vetores-premium/logotipo-de-midia-social-gradiente-roxo_197792-1883.jpg?w=2000" width="50" height="50"></a>
+          <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-insta"></i>
+            <img src="https://img.freepik.com/vetores-premium/logotipo-de-midia-social-gradiente-roxo_197792-1883.jpg?w=2000" width="100" height="100"></a>
 
-	        <a href="https://twitter.com/DonareVitta" target="_blank"><i class="fa fa-twitter"></i>
-             <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" height="50"></a>
-
-
+	        <a href="https://www.tiktok.com/pt-BR/" target="_blank"><i class="fa fa-tiktok"></i>
+             <img src="https://static.vecteezy.com/system/resources/previews/004/542/856/original/tiktok-tik-tok-musically-logo-icon-social-media-icons-set-logo-illustrator-free-vector.jpg" width="100" height="100"></a>
         </div>
       </div>
 
 
       <footer>
-        <p>@Donare Vitta - Todos os direitos reservados</p>
+        <p>Donare Vitta - Todos os direitos reservados</p>
       </footer>
     </div>
 
