--- a/aplicacao/templates/postits.html
+++ b/aplicacao/templates/postits.html
@@ -1,4 +1,6 @@
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}" />
+
+
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}" />
 
     <h1>Post-its</h1>
     <form method="POST" action="{{ url_for('postits') }}">
@@ -16,24 +18,28 @@
     <link rel="shortcut icon" type="image/png" href="../favicon.png" />
     <link rel="stylesheet" href="postits.css">
 
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}" />
+
 
     <title>Mural</title>
+
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+     @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
         *{
           margin: 0;
           padding: 0;
           box-sizing: border-box;
           font-family: 'Poppins', sans-serif;
-         }
+        }
 
         body {
-            background: -webkit-linear-gradient(left, #fff5bd, #fff5bd, #fffdd3,#fffdd3);
+            background: -webkit-linear-gradient(left, #fff5bd, #fff5bd, #fffdd3, #fffdd3);
             font-size: 16px;
             text-align: center;
             padding: 1px;
@@ -41,13 +47,14 @@
 
         h1 {
             font-size: 3.2rem;
-            margin: 25px;
+
             font-weight: bolder;
             text-align: center;
-            padding: 15px;
+            padding-bottom: 20px;
             background: -webkit-linear-gradient(right, #7c0a02, #9b111e, #9b111e, #ff2744);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            margin-top: 15px;
         }
 
         .post-its {
@@ -55,7 +62,7 @@
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             grid-gap: 35px;
             grid-row-gap: 25px;
-            grid-auto-rows: 350px;
+            grid-auto-rows: minmax(300px, auto); /* Atualizei para se ajustar ao conteúdo */
             grid-auto-flow: row dense;
             justify-content: center;
         }
@@ -109,7 +116,7 @@
                 transform: scale(1);
                 opacity: 0.4;
             }
-             50% {
+            50% {
                 transform: scale(1.03);
                 opacity: 0.8;
             }
@@ -128,29 +135,41 @@
             font-weight: bold;
             font-size: 1.2rem;
             margin-bottom: 10px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
         }
 
         .post-it-content {
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.3);
             padding: 10px;
             border-radius: 10px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            width: 90%; /* Atualizei para ocupar 90% do post-it */
+            margin: 0 auto; /* Centralizei horizontalmente */
         }
 
         .post-it p {
             font-size: 1.2rem;
+            text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.9), 1px -1px 1px rgba(0, 0, 0, 0.9), -1px 1px 1px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(0, 0, 0, 0.3); /* Adicione o contorno na fonte */
         }
 
         .delete-button {
-            background: -webkit-linear-gradient(left, #7c0a02,  #7c0a02, #9b111e, #c50532);
+           background: -webkit-linear-gradient(left, #fff5bd, #fff5bd, #fffdd3, #fffdd3);
             color: #fff;
             border: none;
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
+            margin-top: 10px;
         }
 
         .delete-button:hover {
-            background: -webkit-linear-gradient(right, #7c0a02,  #7c0a02, #9b111e, #c50532);
+            background: -webkit-linear-gradient(left, #fff5bd, #fff5bd, #fffdd3, #fffdd3);
         }
 
         textarea {
@@ -158,26 +177,26 @@
             height: 150px;
             padding: 10px;
             border-radius: 5px;
-            border: 1px solid #7c0a02;
+            border: 1px solid #ccc;
             margin-bottom: 10px;
         }
 
         button[type="submit"] {
             background: -webkit-linear-gradient(left, #7c0a02,  #7c0a02, #9b111e, #c50532);
-            color: white;
-            padding: 15px;
+            color:white;
+            padding: 10px 15px;
             border: none;
-            border-radius: 2.5px;
+            border-radius: 5px;
             cursor: pointer;
         }
 
         button[type="submit"]:hover {
-            background: -webkit-linear-gradient(left, #7c0a02,  #7c0a02, #9b111e, #c50532);
+            background: -webkit-linear-gradient(right, #7c0a02,  #7c0a02, #9b111e, #c50532);
         }
 
         .post-it-image {
             position: absolute;
-            top: 10;
+            top: 0;
             left: 0;
             width: 100%;
             height: 100%;
@@ -190,6 +209,10 @@
         @media only screen and (max-width: 600px) {
             .post-its {
                 grid-template-columns: 1fr;
+            }
+
+            .post-it-content {
+                width: 90%;
             }
         }
     </style>
@@ -214,14 +237,11 @@
         {% for postit in postits %}
         <div class="post-it">
             <div class="nomear">
-                <h2>{{ postit.usuario.usuario }}</h2>
-                    <p>{{ postit.usuario.email }}</p>
             </div>
             <div class="post-it-content">
                 <img src="https://ambulatoriodagloria.com.br/img/doacoes.png" class="post-it-image" alt="Sobreposição de Imagem">
                 <p>{{ postit.conteudo }}</p>
             </div>
-
         </div>
         {% endfor %}
     </div>
